--- a/src/components/state/Process/style.css
+++ b/src/components/state/Process/style.css
@@ -1,63 +1,70 @@
-.process {
+/* .process {
   position: relative;
   text-align: center;
   margin-right: 200px;
   height: 1028px;
   top: 560px;
   left: 50px;
+} */
+
+.process {
+  position: relative;
+  height: 1050px;
+  top: 560px;
+  left: 50px;
 }
 
 .headers {
   position: absolute;
-  border: 2px solid red;
+  left: 8.5rem;
+  right: 15rem;
 }
 
-.headers h2 {
-  margin-left: -1.5rem;
+.headers .method-title {
+  text-align: center;
 }
 
-.headers p {
-  margin-top: 14rem;
-  margin-bottom: -10rem;
-  margin-left: 4rem;
+.headers .section-label {
+  position: relative;
+  margin-top: 8rem;
+  text-align: center;
+}
+
+.arrowLeft, .arrowRight {
+  height: 46px;
+  width: 23px;
+  position: absolute;
+  top: 32rem;
 }
 
 .arrowLeft {
-  height: 46px;
-  width: 23px;
-  position: absolute;
-  top: 30rem;
-  left: 4rem;
+  left: 0;
 }
 
 .arrowRight {
-  height: 46px;
-  width: 23px;
-  position: absolute;
-  top: 30rem;
-  right: 4rem;
+  right: 0;
 }
-
 .processImage {
-  width: 92vw;
+  width: 56vw;
   height: 498px;
+  display: block;
+  margin: auto;
 }
 
-.discovery{
+.discovery {
   text-align: left;
-  position:relative;
-  margin-top:54px;
+  position: relative;
+  margin-top: 54px;
   font-size: 36px
 }
 
-.process p {
-  width: 556px;
+.discovery-text {
+  width: 40vw;
   height: 136px;
-  position: relative;
-  left: 368px;
-  right: 216px;
-  top: -80px;
-  text-align: justify;
+  position: absolute;
+  top: 49.5rem;
+  right: 0;
   line-height: 1.5;
   font-family: "Proxima-Nova", sans-serif;
 }
+
