--- a/src/components/stateless/Logos/style.css
+++ b/src/components/stateless/Logos/style.css
@@ -1,42 +1,29 @@
-.mainLogos{
-    height: 293px;
-    background-color: #EEF1F6;
+.Logos {
+  /* width: 100%; */
+  height: 293px;
+  background-color: #EEF1F6;
+  /* position: absolute; */
+  /* left: 11.5rem;
+  right: 11.5rem; */
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  align-items: center;
+  justify-items: center;
 }
 
-.indivLogos{
-
-    padding-left: 12px;
-    padding-top: 95px;
-    padding-right: 45px;
+.logo-container {
+  width: 84vw;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
 }
 
-.indivLogo{
-    margin-left: 158px;
-    height: 115px;
-    width: 87px;
-    float: left;
+.logo {
+  margin-left: -3rem;
 }
 
-.shield{
-    margin-left: 210px;
-}
-
-.uxph{
-    margin-top:40px;
-    width: 175px;
-    height: 44px;
-}
-
-.lions{
-    margin-top: 15px;
-    height: 84.95px;
-    width: 174px;
-
-}
-
-.tugon{
-    margin-top: 10px;
-    width: 104px;
-    height: 104px;
-
+.logo img {
+  width: 100%;
+  height: 100%;
 }
