--- a/src/components/state/Work/style.css
+++ b/src/components/state/Work/style.css
@@ -1,8 +1,9 @@
 .case-studies {
   height: 1240px;
+  width: 92vw;
   position: relative;
   display: block;
-  margin: 0 11.5rem 0 11.5rem;
+  margin: 0 auto;
 }
 
 .case-studies .section-label {
@@ -41,10 +42,13 @@
   text-align: left;
 }
 
-.TedX {
+.TedX, .Meeting, .Laptop {
   width: 35vw;
   height: 480px;
   position: absolute;
+}
+
+.TedX {
   top: 8rem;
 }
 
@@ -53,9 +57,6 @@
 }
 
 .Meeting {
-  width: 35vw;
-  height: 480px;
-  position: absolute;
   top: 40.5rem;
 }
 
@@ -68,9 +69,6 @@
 }
 
 .Laptop {
-  width: 35vw;
-  height: 480px;
-  position: absolute;
   top: 15rem;
   right: 0;
 }
@@ -87,4 +85,137 @@ a:visited {
 .aMeeting:visited {
   font-family: "Rubik";
   color: #ffffff;
+}
+
+@media screen and (max-width: 1024px) {
+  .TedX, .Meeting, .Laptop {
+    width: 42vw;
+    height: 480px;
+    position: absolute;
+  }
+
+  .case-study-bg {
+    width: 42vw;
+  }
+
+  .case-study-text {
+    width: 42vw;
+  }
+
+  .Laptop .case-study-text {
+    text-align: center;
+    padding-left: 0;
+  }
+
+  .Laptop .case-study-text a {
+    padding-left: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .case-studies {
+    width: 86vw;
+    height: 1260px;
+    position: relative;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .case-studies img {
+    width: 62vw;
+    height: 60vh;
+  }
+
+  .case-study-bg {
+    position: relative;
+    height: 50px;
+    line-height: 38px;
+    width: 62vw;
+    top: -4.85rem;
+    fill: solid;
+  }
+
+  .Laptop {
+    position: absolute;
+    top: 30rem;
+    right: 9.6rem;
+  }
+
+  .Laptop .case-study-text {
+    text-align: left;
+    padding-left: 15px;
+  }
+
+  .Meeting {
+    top: 52rem;
+  }
+
+  .case-study-text {
+    padding-left: 15px;
+    width: 62vw;
+    text-align: left;
+  }
+
+  .case-study-text a {
+    padding-left: 0;
+    font-size: 18px;
+    line-height: normal;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .case-studies {
+    width: 88vw;
+    height: 960px;
+  }
+
+  .case-studies img {
+    width: 62vw;
+    height: 46vh;
+  }
+
+  .Laptop {
+    top: 24rem;
+    right: 7.5rem;
+  }
+
+  .Meeting {
+    top: 40rem;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .case-studies {
+    width: 90vw;
+    height: 860px;
+  }
+
+  .case-studies img {
+    width: 62vw;
+    height: 40vh;
+  }
+
+  .Laptop {
+    top: 22rem;
+    right: 5.4rem;
+  }
+
+  .Meeting {
+    top: 36rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .Laptop {
+    right: 4.7rem;
+  }
+  .Laptop .case-study-bg {
+    line-height: 15px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .Laptop {
+    right: 4rem;
+  }
 }
