navbar(feat): make minor adjustments to width when screen is 1024px wide

--- a/src/components/state/Navigation/style.css
+++ b/src/components/state/Navigation/style.css
@@ -18,11 +18,11 @@
   margin-right: 13vw;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .navbar-mr {
@@ -31,8 +31,8 @@
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
 }
 
 .navbar-link, .dropdown-link {
@@ -42,7 +42,7 @@
   font-family: "Proxima-Nova",sans-serif;
   font-weight: 500;
   -ms-flex-item-align: center;
-      align-self: center;
+  align-self: center;
   text-align: center;
   margin-left: 15px;
   margin-right: 15px;
@@ -87,9 +87,8 @@
   background: #008ed4;
   position: fixed;
   top: 6rem;
-  /* opacity: 0.9; */
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .NavDropdown li {
@@ -102,6 +101,23 @@
   background: #006ca1;
 }
 
+@media screen and (max-width: 1024px) {
+  .navbar-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 3.5vw;
+    margin-right: 3.5vw;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .navbar-container {
     display: -webkit-box;
@@ -111,29 +127,11 @@
     margin-right: 5vw;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .navbar-menu {
-    display: block;
-    margin-top: 8px;
-    margin-right: -50vw;
-    width: 3rem;
-  }
-
-  .menu-icon {
-    fill: #ABABAB;
-    cursor: pointer;
-  }
-
-  .navbar-link {
-    display: none;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
   }
 }
 
