work(feat): incorporate mobile responsiveness (#43)
* Finished About Page

* Minor margin fix

* community(feat): incorporate mobile responsiveness for Landing and Events sections for screens <= 320px

* community(feat): further componentize member stories section

* community(feat): incorporate mobile responsiveness for member stories section for screens <= 320px

* community(feat): further componentized events, moved events to state due to utilization of condditional rendering

* community(feat): further componentized opportunities section, clean up some css for events and opportunities sections (made more localized)

* community(feat): further componentize resources section, localize css for member stories, resources, and events

* community(feat): incorporate mobile responsiveness for opportuntunities sections for screens <= 320px

* community(feat): incorporated responsiveness for events section across several screen sizes

* community(feat): incorporate responsiveness for opportunities section across several screen sizes

* community(feat): incorporate responsiveness for member stories section across several screen sizes

* events(feat): adjust image size when screen <= 768px

* community(feat): fix positioning of RedirectButton

* community(feat): incorporate responsiveness for resources section across several screen sizes

* member-stories(feat): minor adjustments for element positioning when screen is <= 320px

* community(feat): add footer

* incorporate stashed changes and resolve merge conflict

* work(feat): reconfigure element nesting and css styling for easier class selector targeting in the landing, process, services, case studies, and logos sections of the Work page

* work(feat): incorporate responsiveness for landing section of work page

* work(feat): add footer, update year in copyright text to 2019

* work(fix): fix positioning of landing image

* work(feat): incorporate responsiveness for process sec

--- a/src/components/pages/Work/style.css
+++ b/src/components/pages/Work/style.css
@@ -1,12 +1,142 @@
-h1{
-    font-size: 300%;
+.Work .landing-container .section-label {
+  text-align: left;
+  margin-left: 11.5rem;
 }
 
-h4 {
-    color: rgb(204, 203, 203);
-    letter-spacing: 7px;
+.Work .landing-container h2 {
+  width: 730px;
+  text-align: left;
+  margin-left: 11.5rem;
 }
 
-body{
-    font-family: Montserrat;
+.Work .landing-container .journey-button {
+  margin-left: 11.5rem;
 }
+
+.Work .landing-container img {
+  position: absolute;
+  right: 11.5rem;
+  height: 568px;
+  width: 704px;
+  margin-top: 7rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .Work .landing-container .section-label {
+    margin-left: 8.5rem;
+  }
+
+  .Work .landing-container h2 {
+    width: 600px;
+    margin-left: 8.5rem;
+  }
+
+  .Work .landing-container .journey-button {
+    margin-left: 8.5rem;
+  }
+
+  .Work .landing-container img {
+    right: 11.5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .Work .landing-container .section-label {
+    margin-left: 2.75rem;
+  }
+
+  .Work .landing-container h2 {
+    width: 450px;
+    margin-left: 2.75rem;
+  }
+
+  .Work .landing-container .journey-button {
+    width: 9.5rem;
+    height: 2.5rem;
+    font-size: 14px;
+    line-height: 2.5rem;
+    display: block;
+    margin: 14rem auto 0 auto;
+  }
+
+  .Work .landing-container img {
+    position: absolute;
+    top: 0rem;
+    right: 2.75rem;
+    height: 100%;
+    width: 45vw;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .Work .landing-container .section-label {
+    margin-left: 2.25rem;
+  }
+
+  .Work .landing-container h2 {
+    width: 450px;
+    margin-left: 2.25rem;
+  }
+
+  .Work .landing-container .journey-button {
+    margin: 11.5rem auto 0 auto;
+  }
+
+  .Work .landing-container img {
+    top: 12rem;
+    right: 2.25rem;
+    height: 176px;
+    width: 208px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .Work .landing-container .section-label {
+    margin-left: 1.5rem;
+  }
+
+  .Work .landing-container h2 {
+    width: 400px;
+    margin-left: 1.5rem;
+  }
+
+  .Work .landing-container .journey-button {
+    margin: 14rem auto 0 auto;
+  }
+
+  .Work .landing-container img {
+    top: 8rem;
+    right: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .Work .landing-container h2 {
+    width: 320px;
+  }
+
+  .Work .landing-container .journey-button {
+    margin: 12rem auto 0 auto;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .Work .landing-container .section-label {
+    margin-left: 1.25rem;
+  }
+
+  .Work .landing-container h2 {
+    width: 200px;
+    margin-left: 1.25rem;
+  }
+
+  .Work .landing-container img {
+    top: 9rem;
+    right: 0;
+  }
+}
+
+
+
+
+
