--- a/src/components/stateless/Logos/style.css
+++ b/src/components/stateless/Logos/style.css
@@ -1,42 +1,64 @@
-.mainLogos{
-    height: 293px;
-    background-color: #EEF1F6;
+.Logos {
+  height: 293px;
+  background-color: #EEF1F6;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  align-items: center;
+  justify-items: center;
 }
 
-.indivLogos{
-
-    padding-left: 12px;
-    padding-top: 95px;
-    padding-right: 45px;
+.logo-container {
+  width: 84vw;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+  justify-items: center;
 }
 
-.indivLogo{
-    margin-left: 158px;
-    height: 115px;
-    width: 87px;
-    float: left;
+.logo {
+  margin-left: -3rem;
 }
 
-.shield{
-    margin-left: 210px;
+.logo img {
+  width: 100%;
+  height: 100%;
 }
 
-.uxph{
-    margin-top:40px;
-    width: 175px;
-    height: 44px;
+@media screen and (max-width: 768px) {
+  .Logos {
+    height: 200px;
+  }
+
+  .logo img {
+    width: 70%;
+    height: 70%;
+  }
+
+  .logo {
+    margin-left: 0;
+  }
 }
 
-.lions{
-    margin-top: 15px;
-    height: 84.95px;
-    width: 174px;
+@media screen and (max-width: 425px) {
+  .Logos {
+    height: 300px;
+  }
 
-}
+  .logo-container {
+    width: 84vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 2rem;
+    justify-items: center;
+    align-items: center;
+  }
 
-.tugon{
-    margin-top: 10px;
-    width: 104px;
-    height: 104px;
-
+  .logo img {
+    width: 50%;
+    height: 50%;
+    display: block;
+    margin: auto;
+  }
 }
