community(fix): fix positioning of event image and RedirectButton found in the opportunities section

--- a/src/components/state/Events/style.css
+++ b/src/components/state/Events/style.css
@@ -106,7 +106,7 @@
 
   .EventImage img {
     width: 84vw;
-    height: 60vh;
+    height: 18rem;
     display: block;
     margin: auto;
     position: relative;
@@ -181,7 +181,7 @@
 
   .EventImage img {
     width: 80vw;
-    height: 32vh;
+    height: 10rem;
     top: -41.5rem;
   }
 
