work(fix): fix positioning of images in case studies section

--- a/src/components/state/Work/style.css
+++ b/src/components/state/Work/style.css
@@ -123,7 +123,7 @@ a:visited {
 
   .case-studies img {
     width: 62vw;
-    height: 56vh;
+    height: 20rem;
   }
 
   .case-study-bg {
@@ -171,7 +171,7 @@ a:visited {
 
   .case-studies img {
     width: 62vw;
-    height: 40vh;
+    height: 14rem;
   }
 
   .Laptop {
@@ -192,7 +192,7 @@ a:visited {
 
   .case-studies img {
     width: 62vw;
-    height: 35vh;
+    height: 12rem;
   }
 
   .Laptop {
