--- a/src/components/state/Navigation/style.css
+++ b/src/components/state/Navigation/style.css
@@ -80,6 +80,7 @@
 }
 
 .NavDropdown {
+  display: none;
   z-index: 99;
   width: 100vw;
   height: auto;
@@ -136,6 +137,13 @@
 }
 
 @media screen and (max-width: 600px) {
+  .none {
+    display: none;
+  }
+
+  .NavDropdown {
+    display: block;
+  }
   .navbar-menu {
     display: block;
     margin-top: 8px;
@@ -144,8 +152,15 @@
   }
 
   .menu-icon {
-    fill: #ABABAB;
     cursor: pointer;
+    width: 40px;
+  }
+
+  .menu-icon div {
+    background: #ABABAB;
+    width: 100%;
+    margin: 5px;
+    height: 8px
   }
 
   .navbar-link {
