--- a/src/components/state/Events/style.css
+++ b/src/components/state/Events/style.css
@@ -1,7 +1,7 @@
 .events-container {
   height: 900px;
   background: #EEF1F6;
-  padding-top: 1rem;
+  padding: 1rem;
 }
 
 .events-container .section-label {
