--- a/src/components/state/MemberStoryComp/style.css
+++ b/src/components/state/MemberStoryComp/style.css
@@ -33,17 +33,15 @@
 }
 
 .memberStoryText{
-    position:relative;
-    margin-top: 71px;
+    margin: 30px auto;
     width: 900px;
-    margin-left: 301px;
     text-align: left;
 }
 
 .memberStoryParagraphBox{
   height: 290px;
   line-height: 32px
-    
+
 }
 
 
@@ -52,8 +50,8 @@
 }
 
 .MSbottomImage{
-    margin-left: 301px;
-    margin-top: 84px;
+  width: 900px;
+  margin: auto;
 }
 
 
@@ -61,43 +59,7 @@
     font-size: 18px;
     line-height: 32px;
     letter-spacing: 1px;
-    margin-top: 64px;
-
-}
-
-.MSbackButtonDiv{
-    position: relative;
-    
-    font-style: initial;
-    margin-left: 213px;
-
-
-}
-.backButtonh4{
-    letter-spacing:1px;
-    line-height: 32px;
-    font-size: 18px;
-    width: 53px;
-}
-
-.backButtonh4:hover{
-    cursor: pointer;
-}
-
-.MSOtherStoriesButtonDiv{
-    margin-left: 893px;
-    top: -56px;
-    position: relative;
-}
-
-.otherStoriesButton{
-    letter-spacing:1px;
-    color: #008ED4;
-    line-height: 32px;
-    font-size: 18px;
-    font-weight: 600
-    
-}
-.otherStoriesButton:hover{
-    cursor: pointer;
+    margin: 30px auto;
+    width: 80%;
+    text-align: center;
 }
