work(fix): fix responsiveness for services and case studies sections (#46)
* Finished About Page

* Minor margin fix

* community(feat): incorporate mobile responsiveness for Landing and Events sections for screens <= 320px

* community(feat): further componentize member stories section

* community(feat): incorporate mobile responsiveness for member stories section for screens <= 320px

* community(feat): further componentized events, moved events to state due to utilization of condditional rendering

* community(feat): further componentized opportunities section, clean up some css for events and opportunities sections (made more localized)

* community(feat): further componentize resources section, localize css for member stories, resources, and events

* community(feat): incorporate mobile responsiveness for opportuntunities sections for screens <= 320px

* community(feat): incorporated responsiveness for events section across several screen sizes

* community(feat): incorporate responsiveness for opportunities section across several screen sizes

* community(feat): incorporate responsiveness for member stories section across several screen sizes

* events(feat): adjust image size when screen <= 768px

* community(feat): fix positioning of RedirectButton

* community(feat): incorporate responsiveness for resources section across several screen sizes

* member-stories(feat): minor adjustments for element positioning when screen is <= 320px

* community(feat): add footer

* incorporate stashed changes and resolve merge conflict

* work(feat): reconfigure element nesting and css styling for easier class selector targeting in the landing, process, services, case studies, and logos sections of the Work page

* work(feat): incorporate responsiveness for landing section of work page

* work(feat): add footer, update year in copyright text to 2019

* work(fix): fix positioning of landing image

* work(feat): incorporate respons

--- a/src/components/state/Navigation/style.css
+++ b/src/components/state/Navigation/style.css
@@ -124,6 +124,23 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-left: 3.5vw;
+    margin-right: 3.5vw;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navbar-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin-left: 5vw;
     margin-right: 5vw;
     -webkit-box-orient: horizontal;
