--- a/src/components/pages/Home/style.css
+++ b/src/components/pages/Home/style.css
@@ -33,7 +33,8 @@
 
 .home-landing-image {
   grid-column: 2/2;
-  grid-row: 2/7;
+  grid-row: 4/7;
+  margin-left: -4rem;
 }
 
 .mobile-landing-image {
@@ -60,16 +61,10 @@
   text-align: center;
 }
 
-.blue1 {
+.design-leaders-img {
   position: absolute;
-  top: 1000px;
+  top: 750px;
   left: -15px;
-}
-
-.blue2 {
-  position: absolute;
-  top: 663px;
-  right: 0px;
 }
 
 .HomeCard-container {
