--- a/src/components/state/HomeCard/style.css
+++ b/src/components/state/HomeCard/style.css
@@ -53,6 +53,12 @@
   width: 380px;
 }
 
+@media screen and (max-width: 1024px) {
+  .HomeCard {
+    width: 450px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .HomeCard {
     height: 600px;
@@ -61,7 +67,8 @@
 
   .HomeCard img {
     width: 100%;
-    height: auto;
+    height: 200px;
+    margin-top: 3rem;
   }
 
   .HomeCard h2 {
@@ -88,7 +95,7 @@
     margin-left: 0px;
   }
 
-  .HomeCard:last-of-type {
+  .HomeCardRight {
     margin-right: 0px;
   }
 }
@@ -103,7 +110,7 @@
 @media screen and (max-width: 320px) {
   .HomeCard {
     width: 275px;
-    height: 330px;
+    height: 360px;
   }
 
   .HomeCard:first-of-type {
